# meilimelo

./: .gitignore  Cargo.toml  README.md
meilimelo/: Cargo.toml
meilimelo-macros/: Cargo.toml
meilimelo-macros/src/: lib.rs
meilimelo/examples/: main.rs
meilimelo/src/: documents.rs  facets.rs  indices.rs  insert.rs  lib.rs  results.rs  search.rs
