[package]
name = "meilimelo-macros"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine@popineau.eu>"]
license = "MIT"

description = "API client to MeiliSearch (macros)"
keywords = ["search", "meilisearch"]
categories = ["database"]
homepage = "https://github.com/apognu/meilimelo"
readme = "../README.md"

edition = "2018"
workspace = "../"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
